--- a/public/css/style.css
+++ b/public/css/style.css
@@ -236,6 +236,10 @@ main ul {
     border-bottom: 2px solid #363636;
 }
 
+.form-regular:focus, .form-large:focus {
+    border-color: #d20163;
+}
+
 .form-submit {
     background-color: #363636;
     color: white;
@@ -283,4 +287,17 @@ main ul {
 .form-inline-error-button {
     margin-left: 80px;
     color: red;
+}
+
+.form-noselect {
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.form-noselect:focus {
+    outline: none !important;
 }
